config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-deployment
  labels:
    version: v1
spec:
  replicas: 1
  template:
    metadata:
      name: demo-service
      labels:
        version: v1
    spec:
      serviceAccountName: demo-service-sa
      containers:
      - name: demo-app
        image: gcr.io/terra-kernel-k8s/workspace-test:0.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      - name: cloudsql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.16
        command: ["/cloud_sql_proxy",
                  "-instances=terra-kernel-k8s:us-central1:$(SQL_INSTANCE_NAME)=tcp:5432",
                  "-credential_file=/secrets/cloudsql/sql-creds.json"]
        securityContext:
          runAsUser: 2  # non-root user
          allowPrivilegeEscalation: false
        volumeMounts:
        - name: cloudsql-sa-creds
          mountPath: /secrets/cloudsql
          readOnly: true
      volumes:
        - name: cloudsql-sa-creds
            secret:
              secretName: cloudsql-sa-creds
