config/service.yaml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "demo-deployment-service"
spec:
  ports:
  - name: "http"
    port: 8080
  selector:
    app: "demo-service"
