config/istio-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kernel-service-poc-vservice
spec:
  hosts:
  - "*"
  gateways:
  - template-gateway.default.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /kernel-service-poc
    route:
    - destination:
        port:
          number: 8080
        host: kernel-service-poc-service.default.svc.cluster.local
